@@ -140,8 +140,12 @@ class DefaultAccountAdapter(object):
         unique.
         """
         user = get_user_model()()
-        user.username = username or generate_unique_username(first_name or
-                                                             last_name or email)
+        username_field = app_settings.USER_MODEL_USERNAME_FIELD
+        if username_field:
+            setattr(user,
+                    username_field,
+                    username or generate_unique_username(first_name or
+                                                         last_name or email))
         user.email = email
         user.first_name = first_name
         user.last_name = last_name
