@@ -4,6 +4,7 @@ from allauth.utils import (import_attribute,
                            get_user_model,
                            valid_email_or_none)
 
+from ..account import app_settings as account_settings
 from . import app_settings
 
 class DefaultSocialAccountAdapter(object):
@@ -40,7 +41,9 @@ class DefaultSocialAccountAdapter(object):
         responsibility.
         """
         user = get_user_model()()
-        user.username = username or ''
+        username_field = account_settings.USER_MODEL_USERNAME_FIELD
+        if username_field:
+            setattr(user, username_field, username or '')
         user.email = valid_email_or_none(email) or ''
         name_parts= (name or '').partition(' ')
         user.first_name = first_name or name_parts[0]
